<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_screen">

    <ImageButton
        android:layout_width="61dp"
        android:layout_height="65dp"
        android:background="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_demo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_what_to_eat"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/punjabi"
        tools:layout_editor_absoluteY="214dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:background="@drawable/chinese"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="214dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo3" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:background="@drawable/gujarati"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="364dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo4" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:background="@drawable/sizzler"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="364dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo5" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/table_booking"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="537dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo6" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/event_booking"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="537dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo7" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="wrap_content"
        android:layout_height="650dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"
        tools:ignore="MissingConstraints"/>
</androidx.constraintlayout.widget.ConstraintLayout>